welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:6: error: not found: value nb
    nb = compteur(tab,k+1)
    ^